apps/downloads/sabnzbd/app/auth-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: sabnzbd-auth
spec:
  plugin:
    traefik-oidc-auth:
      Provider:
        Url: "https://idm.lucadev.de/oauth2/openid/sabnzbd"
        ClientId: "sabnzbd"
        ClientSecret: "urn:k8s:secret:sabnzbd-secret:client-secret"
        TokenValidation: "IdToken"
        UsePkce: true
      Scopes: ["openid", "profile"]

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: sabnzbd-auth
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: sabnzbd
  oidc:
    provider:
      issuer: https://idm.lucadev.de/oauth2/openid/sabnzbd
    clientID: sabnzbd
    clientSecret:
      name: sabnzbd-secret
    redirectURL: /
    logoutPath: /logout
